# cogAgent_tracker

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .uv.toml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker_architecture.md  mise.toml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260311_000001_initial_schema.py  20260312_000002_add_analyst_trace_fields.py  20260318_000003_add_architecture_metrics_fields.py
config/: scienceworld.yaml
docs/: agent_architecture_roadmap.md  heuristic_inventory.md  v2_general_runtime_roadmap.md
fixtures/openclaw/: contacts_focus_repair_trace.json  input_method_detour_trace.json
grafana/dashboards/: cogagent_monitor.json
grafana/provisioning/dashboards/: cogagent.yml
grafana/provisioning/datasources/: infinity.yml  postgres.yml
memory/: memory1.txt  memory2.txt
notebooks/: exploration.py
notebooks/__marimo__/session/: exploration.py.json
prompts/: ablate_claude_prompt.txt  ablate_codex_prompt.txt  ablate_cogfix_prompt.txt  ablate_scienceworld_prompt.txt  iterate_claude_prompt.txt  iterate_codex_prompt.txt  iterate_cogfix_prompt.txt  iterate_scienceworld_prompt.txt
scripts/: backfill_experiment_metrics.py  bootstrap_alfworld.sh  bootstrap_androidworld.sh  bootstrap_webarena.sh  check_androidworld.py  check_webarena.py  export_comparison_telemetry.py  get_latest_experiment.py  iterate_agent.py  iterate_scienceworld.py  manage_webarena_stack.sh  run_agent.py  run_protocol_mode_slice.py
src/: app.py  config.py  main.py  test_connections.py
src/agent/: autogen_agent.py  baseline_agent.py  decision_state.py  deliberation_policy.py  env_adapter.py  gwt_agent.py  helpers.py  rag_memory.py  run_autogen_eval_loop.py
src/agent/configs/: androidworld.yaml  eval_config.yaml  nethack.yaml  prompts.yaml  scienceworld.yaml  tales.yaml  webarena.yaml
src/agent/integrations/: __init__.py
src/agent/integrations/openclaw/: __init__.py  adapter.py  deliberation.py  gwt_backend.py  protocol.py  service.py
src/agent/memory/nethack/: memory1.txt  memory2.txt
src/agent/runtime/: __init__.py  driver.py  session.py
src/agent/v2/: __init__.py  controller.py  executor.py  memory.py  planner.py  types.py  world_model.py
src/api/v1/: endpoints.py  health.py  openclaw_runtime.py
src/automation/: __init__.py  iteration.py
src/config/: __init__.py  androidworld_runtime.py  androidworld_validation.py  env_validation.py  schema_health.py  webarena_validation.py
src/models/: db.py
src/storage/: cache.py  database.py  models.py  s3.py
tests/: test_androidworld_adapter.py  test_androidworld_runtime.py  test_androidworld_validation.py  test_connections.py  test_export_comparison_telemetry.py  test_gwt_agent_memory_paths.py  test_iteration_workflow.py  test_nethack_surroundings.py  test_openclaw_adapter.py  test_openclaw_gwt_backend.py  test_openclaw_protocol.py  test_openclaw_runtime_api.py  test_run_agent_status.py  test_run_protocol_mode_slice.py  test_runtime_driver.py  test_v2_controller.py  test_v2_env_adapter.py  test_v2_memory.py  test_v2_scaffold.py  test_v2_world_model.py
